--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ body {
     object-fit: contain;
     margin: 0;
     background-image: url('./backgrounds/random.jpg');
-    color: white;
+    color: whitesmoke;
     background-size:     cover;                      /* <------ */
     background-repeat:   no-repeat;
     background-position: center center;   
@@ -136,7 +136,7 @@ input {
   }
   
   .slider {
-    background-color: rgb(92, 117, 81);
+    background-color: rgba(256,256,256,0.2);
     bottom: 0;
     cursor: pointer;
     left: 0;
@@ -148,17 +148,18 @@ input {
   
   .slider:before {
     background-color: #fff;
-    bottom: 4px;
+    bottom: 1px;
     content: "";
     height: 26px;
-    left: 4px;
+    left: 1px;
     position: absolute;
     transition: .4s;
     width: 26px;
   }
   
   input:checked + .slider {
-    background-color: rgb(187, 160, 160);
+    background-color: rgba(256,256,256,0.2);
+    border: 3px solid white;
   }
   
   input:checked + .slider:before {
@@ -167,6 +168,7 @@ input {
   
   .slider.round {
     border-radius: 34px;
+    border: 3px solid white;
   }
   
   .slider.round:before {
@@ -188,6 +190,8 @@ input {
     justify-content: flex-end;
     margin-top: 20px;
     margin-right: 30px;
+    width: clamp(250px,90%,1200px);
+
   }
 
 
@@ -211,6 +215,9 @@ input {
       height: 100%;
       min-height: 0;
      }
+     .toggle-container {
+      align-items: flex-start;
+     }
   }
 
   .hourly {
@@ -219,7 +226,19 @@ input {
     grid-column-start: 1;
     grid-column-end: 3;
     padding-top: 40px;
+    width: clamp(250px,90%,1200px);
     display: flex;
     flex-wrap: wrap;
     gap:25px;
+  }
+
+  .toggle-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .margins {
+    margin-right: 50px;
+    margin-top: 30px;
   }
